# Skeleto

./: README.md  pyproject.toml
Skeleto/: core.py
docs/: index.html
